# DreamEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Engine/Source/Runtime/Core/: CMakeLists.txt
Engine/Source/Runtime/Core/Include/: CoreGlobal.h  CoreType.h
Engine/Source/Runtime/Core/Include/Async/: QueuedThreadPool.h
Engine/Source/Runtime/Core/Include/Async/Essential/: LocalQueue.h
Engine/Source/Runtime/Core/Include/Common/: MemoryBase.h  Platform.h  PlatformAffinity.h  PlatformMisc.h  PlatformProcess.h  PlatformTLS.h  PlatformTime.h  PreProcessHelper.h  QueuedWork.h  Runnable.h  RunnableThread.h  SyncEventPool.h  SyscEvent.h  ThreadBase.h  ThreadManager.h
Engine/Source/Runtime/Core/Include/Container/: AtomicMpMcQueue.h
Engine/Source/Runtime/Core/Include/Math/: MathUtility.h  NumsLimits.h
Engine/Source/Runtime/Core/Include/Misc/: CoreDefines.h  CoreMiscDefines.h  EnumClassFlags.h  TimeSpan.h
Engine/Source/Runtime/Core/Include/Template/: Alignment.h  IsIntegral.h  IsPtr.h  IsSignedType.h  ResolveTypeAmbiguity.h  TRefMisc.h  TSingleton.h
Engine/Source/Runtime/Core/Include/UniversalPlatform/: UniversalPlatform.h  UniversalPlatformAffinity.h  UniversalPlatformMemory.h  UniversalPlatformMisc.h  UniversalPlatformProcess.h  UniversalPlatformTLS.h  UniversalPlatformTime.h
Engine/Source/Runtime/Core/Include/Windows/: WindowsPlatform.h  WindowsPlatformAffinity.h  WindowsPlatformMisc.h  WindowsPlatformProcess.h  WindowsPlatformTLS.h  WindowsPlatformTime.h  WindowsRunnableThread.h  WindowsSyncEvent.h
Engine/Source/Runtime/Core/Src/Common/: MemoryBase.cpp  ThreadBase.cpp
Engine/Source/Runtime/Core/Src/Math/: MathUtility.cpp
Engine/Source/Runtime/Core/Src/Misc/: CoreGlobal.cpp
Engine/Source/Runtime/Core/Src/UniversalPlatform/: UniversalPlatformMemory.cpp  UniversalPlatformMisc.cpp  UniversalPlatformProcess.cpp  UniversalPlatformTime.cpp
Engine/Source/Runtime/Core/Src/Windows/: WindowsPlatformMisc.cpp  WindowsPlatformProcess.cpp  WindowsPlatformTLS.cpp  WindowsPlatformTime.cpp  WindowsRunnableThread.cpp
Test/Runtime/: CMakeLists.txt  RuntimeTest.cpp
